[DUOS-1740][risk=no] Remove Deprecated/Unused Endpoints (#1786)
* rm unused apis